--- a/jinjin-starter.html
+++ b/jinjin-starter.html
@@ -61,7 +61,7 @@
 
 			// 2 - get a reference to the <audio> element on the page
 			audioElement = document.querySelector("audio");
-			audioElement.src = SOUND_PATH.sound3;
+			audioElement.src = SOUND_PATH.sound2;
 
 			// 3 - create an a source node that points at the <audio> element
 			sourceNode = audioCtx.createMediaElementSource(audioElement);
@@ -83,9 +83,8 @@
 
 //			// 6 - connect the nodes - we now have an audio graph
 //			sourceNode.connect(analyserNode);
-//			analyserNode.connect(gainNode);
-//			gainNode.connect(audioCtx.destination);
-
+//          analyserNode.connect(gainNode);
+//          gainNode.connect(audioCtx.destination);
             sourceNode.connect(audioCtx.destination);
             //this channel will play and visualize the delay
             sourceNode.connect(delayNode);
@@ -149,8 +148,13 @@
 			let volumeSlider = document.querySelector("#volumeSlider");
 			volumeSlider.oninput = e => {
 				gainNode.gain.value = e.target.value;
+                if(gainNode.gain.value == 0){
+                    gainNode.gain.value = 0.0;
+                }
 				volumeLabel.innerHTML = Math.round((e.target.value/2 * 100));
+                console.log(gainNode.gain.value);
 			};
+            	volumeSlider.dispatchEvent(new InputEvent("input"));
 
             //DELAY SLIDER
             let delaySlider = document.querySelector("#delaySlider");
@@ -158,7 +162,7 @@
                 delayAmount = e.target.value;
                 delayLabel.innerHTML = e.target.value;
             }
-			volumeSlider.dispatchEvent(new InputEvent("input"));
+
 
             //CHECKBOX ACTIVATION
             document.getElementById('invert').onchange = function(e){
@@ -208,15 +212,42 @@
             let topSpacing = 525;
 
             for(let i = 0; i < audioData.length; i++){
-                drawCtx.beginPath();
-                drawCtx.fillStyle = 'rgba(255, 0, 0, 0.5)';
+//                drawCtx.beginPath();
+//                drawCtx.fillStyle = 'rgba(255, 0, 0, 0.5)';
+//                drawCtx.save();
+//                drawCtx.scale(.75, 1);
+//                drawCtx.arc(750 - i * (barHeight + barSpacing), topSpacing - audioData[i] * 0.5, barHeight - 75, 0, 2*Math.PI, false);
+//                drawCtx.fill();
+//                drawCtx.stroke();
+//                drawCtx.closePath();
+//                drawCtx.restore();
+
+                 //grass
                 drawCtx.save();
+                drawCtx.beginPath();
+                drawCtx.strokeStyle = "green";
+                drawCtx.moveTo((i * 6), 550);
+                //drawCtx.bezierCurveTo(i * 4, 550, (i * 4), 540, (i * 4), (audioData[i] * 0.5) + 500); - straight lines
+                drawCtx.bezierCurveTo(i * 6, 550, (i * 6 + 25), 530, (i * 6 + 27), (audioData[i] * .4) + 520);
+                drawCtx.stroke();
+                drawCtx.closePath();
+                drawCtx.restore();
+                //}
+
+
+                //eggs
+                drawCtx.beginPath();
+                drawCtx.save();
+                //changeEggColor();
+                drawCtx.fillStyle = 'rgba(255, 0, 0, 0.5)';
                 drawCtx.scale(.75, 1);
-                drawCtx.arc(750 - i * (barHeight + barSpacing), topSpacing - audioData[i] * 0.5, barHeight - 75, 0, 2*Math.PI, false);
+                drawCtx.arc(750 - i * (barHeight + barSpacing), topSpacing - audioData[i] * 0.5, barHeight - 75, 0, 2 * Math.PI, false);
                 drawCtx.fill();
                 drawCtx.stroke();
                 drawCtx.closePath();
                 drawCtx.restore();
+
+
             }
             manipulatePixels(drawCtx);
             delayNode.delayTime.value = delayAmount;
@@ -277,6 +308,10 @@
             ctx.putImageData(imageData, 0, 0);
         }
 
+        function changeEggColor() {
+           // if(document.querySelector(""))
+        }
+
     </script>
 </head>
 
@@ -285,47 +320,51 @@
         <div id="container">
             <canvas width="750" height="550"></canvas>
             <div id="controls">
-                <audio></audio>
-<<<<<<< HEAD
-                <div class="column">
-                    <!-- CHOOSE AUDIO-->
-                    <section>
-                        <label>Track:
-                            <select id="trackSelect">
-                                <option value="testAudio/New Adventure Theme.mp3">New Adventure Theme</option>
-                                <option value="testAudio/Peanuts Theme.mp3">Peanuts Theme</option>
-                                <option value="testAudio/The Picard Song.mp3" selected>The Picard Song</option>
-                            </select>
-                        </label>
+                <audio controls>
 
-                        <!--PLAY BUTTON-->
-                        <button id="playButton" data-playing="no"></button>
-                        <!--FULL SCREEN-->
-                        <button id="fsButton">Full Screen</button>
-                    </section>
+                </audio>
+                <div id="left-side">
+                    <div class="column">
+                        <!-- CHOOSE AUDIO-->
+                        <section>
+                            <label>Track:
+                                <select id="trackSelect">
+                                    <option value="testAudio/bornThisWay.mp3">Born This Way</option>
+                                    <option value="testAudio/chickenSong.mp3" selected>The Chicken Song</option>
+                                    <option value="testAudio/sicEmOnAChicken.mp3">Sic 'Em On A Chicken</option>
+                                    <option value="testAudio/chickenFried.mp3">Chicken Fried</option>
+                                </select>
+                            </label>
 
-                    <!--SLIDERS-->
-                    <section class="effectBox">
-                        <span>Sound Effects</span>
-                        <!--VOLUME SLIDER-->
-                        <section class="sliders">
-                            Volume: <input type="range" id="volumeSlider" min="0" max="2" value="1" step="0.01">
-                            <span id="volumeLabel">???</span>
+                            <!--PLAY BUTTON-->
+                            <button id="playButton" data-playing="no"></button>
+                            <!--FULL SCREEN-->
+                            <button id="fsButton">Full Screen</button>
                         </section>
-                        <!--REVERB SLIDER-->
-                        <section class="sliders">
-                            Reverb: <input type="range" id="delaySlider" min="0.0" max="1.0" value="0" step="0.1"> <span id="delayLabel">0</span>
+
+                        <!--SLIDERS-->
+                        <section class="effectBox">
+                            <h3>Sound Effects</h3>
+                            <!--VOLUME SLIDER-->
+                            <section class="sliders">
+                                Volume: <input type="range" id="volumeSlider" min="0" max="2" value="1" step="0.01">
+                                <span id="volumeLabel">???</span>
+                            </section>
+                            <!--REVERB SLIDER-->
+                            <section class="sliders">
+                                Reverb: <input type="range" id="delaySlider" min="0.0" max="1.0" value="0" step="0.1"> <span id="delayLabel">0</span>
+                            </section>
+                            <!--BRIGHTNESS SLIDER-->
+                            <section class="sliders">
+                                Distortion: <input type="range" id="distortSlider" min="0" max="1" value="0" step="0.01"> <span id="distortLabel">???</span>
+                            </section>
                         </section>
-                        <!--BRIGHTNESS SLIDER-->
-                        <section class="sliders">
-                            Distortion: <input type="range" id="distortSlider" min="0" max="1" value="0" step="0.01"> <span id="distortLabel">???</span>
-                        </section>
-                    </section>
+                    </div>
                 </div>
                 <div class="column">
                     <!--CHECKBOXES-->
                     <section class="effectBox">
-                        <span>Visual Effects</span>
+                        <h3>Visual Effects</h3>
 
                         <!--INVERT-->
                         <section class="checkbox">
@@ -343,7 +382,7 @@
 
                     <!--RADIO BUTTONS-->
                     <section class="effectBox">
-                        <span>Pride Colors</span>
+                        <h3>Pride Colors</h3>
                         <!--GAY-->
                         <section class="radio">
                             Gay: <input type="radio" name="pride" value="pan">
@@ -371,79 +410,6 @@
                         </section>
                     </section>
                 </div>
-=======
-
-                <!-- CHOOSE AUDIO-->
-                <section>
-                    <label>Track:
-                        <select id="trackSelect">
-                            <option value="testAudio/bornThisWay.mp3">Born This Way</option>
-                            <option value="testAudio/chickenSong.mp3">The Chicken Song</option>
-                            <option value="testAudio/sicEmOnAChicken.mp3" selected>Sic 'Em On A Chicken</option>
-                            <option value="testAudio/chickenFried.mp3" selected>Chicken Fried</option>
-                        </select>
-                    </label>
-
-                    <!--PLAY BUTTON-->
-                    <button id="playButton" data-playing="no"></button>
-                    <!--FULL SCREEN-->
-                    <button id="fsButton">Full Screen</button>
-                </section>
-
-                <!--SLIDERS-->
-
-                <!--VOLUME SLIDER-->
-                <section class="sliders">
-                    Volume: <input type="range" id="volumeSlider" min="0" max="2" value="1" step="0.01">
-                    <span id="volumeLabel">???</span>
-                </section>
-                <!--REVERB SLIDER-->
-                <section class="sliders">
-                    Reverb: <input type="range" id="reverbSlider" min="0" max="1" value="0" step="0.01"> <span id="reverbLabel">???</span>
-                </section>
-                <!--BRIGHTNESS SLIDER-->
-                <section class="sliders">
-                    Brightness: <input type="range" id="reverbSlider" min="0" max="1" value="0" step="0.01"> <span id="reverbLabel">???</span>
-                </section>
-
-                <!--CHECKBOXES-->
-
-                <!--INVERT-->
-                <section class="checkbox">
-                    Invert: <input type="checkbox" id="invert">
-                </section>
-                <!--SEPIA-->
-                <section class="checkbox">
-                    Sepia: <input type="checkbox" id="sepia">
-                </section>
-                <!--NOISE-->
-                <section>
-                    Noise: <input type="checkbox" id="noise">
-                </section>
-
-                <!--RADIO BUTTONS-->
-
-                <!--GAY-->
-                <section class="radio">
-                    Gay: <input type="radio" name="pride" value="pan">
-                </section>
-                <!--LESBIAN-->
-                <section class="radio">
-                    Lesbian: <input type="radio" name="pride" value="pan">
-                </section>
-                <!--BI-->
-                <section class="radio">
-                    Bisexual: <input type="radio" name="pride" value="bi">
-                </section>
-                <!--PAN-->
-                <section class="radio">
-                    Pansexual: <input type="radio" name="pride" value="pan">
-                </section>
-                <!--ACE-->
-                <section class="radio">
-                    Asexual: <input type="radio" name="pride" value="pan">
-                </section>
->>>>>>> origin/Development
             </div>
         </div>
     </div>
